<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>in.succinct</groupId>
  <artifactId>catalog.indexer</artifactId>
  <version>1.1-SNAPSHOT</version>
  <name>catalog.indexer</name>
  <description>catalog.indexer</description>
    <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <revision>2.15-SNAPSHOT</revision>
    </properties>
<build>
        <plugins>
            <plugin>
                <groupId>com.github.venkatramanm.swf-all</groupId>
                <artifactId>swf-maven-plugin</artifactId>
                <version>2.10</version>
                    <dependencies>
                        <dependency>
                            <groupId>in.succinct</groupId>
                            <artifactId>catalog.indexer</artifactId>
                            <version>1.0-SNAPSHOT</version>
                        </dependency>
                    </dependencies>
            </plugin>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>3.5.1</version>
              <configuration>
                <source>17</source>
                <target>17</target>
                <!--
                    <compilerArgs>
                    <arg>-verbose</arg>
                    <arg>-Xlint:all,-options,-path</arg>
                    </compilerArgs>
                 -->
              </configuration>
          </plugin>
        </plugins>
    </build>
  <url>http://maven.apache.org</url>
  <licenses>
    <license>
      <name>MIT</name>
      <url>LICENSE.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <scm>
    <connection>scm:git:git@github.com:venkatramanm/catalog.indexer.git</connection>
    <developerConnection>scm:git:git@github.com:venkatramanm/catalog.indexer.git</developerConnection>
    <url>https://github.com/venkatramanm/catalog.indexer/tree/master</url>
  </scm>
  <developers>
    <developer> 
      <id>venky</id>
      <name>Venkatraman Mahadevan</name>
      <email>venkatramanm@yahoo.com</email>
    </developer>
  </developers>
  <dependencies>
    <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.13.2</version>
        <scope>test</scope>
    </dependency>
  	<dependency>
        <groupId>com.github.venkatramanm.swf-all</groupId>
  		<artifactId>swf</artifactId>
        <version>[${revision},)</version>
  	</dependency>
      <dependency>
          <groupId>in.succinct.beckn</groupId>
          <artifactId>sdk</artifactId>
          <version>[1.2,)</version>
      </dependency>
      <dependency>
          <groupId>com.github.venkatramanm.swf-all</groupId>
          <artifactId>swf-plugin-collab</artifactId>
          <version>[2.13-SNAPSHOT,)</version>
      </dependency>
  </dependencies>
</project>
